--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <div class="container">
         
         <main class="content">
-            <section class="controle-e"><span>
-                <div class="gatilho-1"></div>
+            <section class="controle-e"><div class="gatilho-1"></div><span>
                     <div class="menos">-</div>
                 </span>
                 <span>
@@ -48,6 +47,7 @@
             <section class="borda">
                 <section class="tela"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/7dHtQ0jq964" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></section>
             </section>
+
             <section class="controle-d">
                 <div class="gatilho-2"></div>
                 <span>
