update background e botao desliga

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nintendo Switch</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -57,16 +59,17 @@
                 </span>
 
             </section>
-
+            <div class="desliga"></div>
             <section class="borda">
+                
                 <section class="tela">
                     <div class="content-tela">
                         <div class="esq"><div></div></div>
                         <div class="dir"><div></div></div>
                     </div>
                     <div class="title">
-                        <h3>Nintendo</h3>
-                    <h1>Switch</h1></div>
+                        <h3>NINTENDO</h3>
+                    <h1>SWITCH</h1></div>
                 </section>
             </section>
 
